# plover_hy_dictionary

./: README.md  setup.cfg
plover_hy_dictionary/: __init__.py  hy_dictionary.hy
test/: en_example.hy
