[metadata]
name = plover_hy_dictionary
version = 0.0.1
description = Hy dictionary support for Plover.
long_description = file: README.rst
author = Nick Markopoulos
author_email = nsmarkop@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/nsmarkop/plover_hy_dictionary
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    hy==0.14.0
    plover>=4.0.0.dev1
    plover-python-dictionary>=0.5.8
packages =
    plover_hy_dictionary

[options.entry_points]
plover.dictionary =
    hy = plover_hy_dictionary.hy_dictionary:HyDictionary
